# phonton-desktop

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts
.github/workflows/: release-desktop.yml
docs/: RELEASE_SIGNING.md
release-notes/: v0.2.0.md  v0.2.10.md  v0.2.2.md  v0.2.3.md  v0.2.4.md  v0.2.5.md  v0.2.6.md  v0.2.7.md  v0.2.8.md  v0.2.9.md  v0.3.0.md  v0.3.1.md  v0.3.2.md
src/: main.rs  main.tsx  vite-env.d.ts
src-tauri/: .tauri-signing.key.pub  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: allow-serve-proxy.toml  allow-sidecar-lifecycle.toml  allow-spawn-phonton-serve.toml  allow-stop-phonton-serve.toml
src-tauri/src/: lib.rs  main.rs  serve_proxy.rs  sidecar_spawn.rs
src/app/: App.tsx  MainShell.tsx
src/components/: SettingsModal.tsx
src/components/focus/: CodeFocus.tsx  ContextFocus.tsx  FocusShell.tsx  LogFocus.tsx  PlanFocus.tsx  ProblemsFocus.tsx  ReceiptFocus.tsx  RunFocus.tsx  TokensFocus.tsx
src/components/setup/: SetupHeader.tsx  SetupPage.tsx  SetupStepAuth.tsx  SetupStepCli.tsx  SetupStepFinish.tsx  (+3 more)
src/hooks/: useAppUpdater.ts  useGoalRun.ts  useSessions.ts  useSidecar.ts
src/lib/: app-updater.ts  auth-handoff.ts  cli-install.ts  cli-version.ts  config.ts  format-relative.ts  license.ts  projects.ts  serve.ts  setup.ts  sidecar-upgrade.ts  sidecar.ts
src/pages/: SettingsPage.tsx
src/styles/: globals.css  shell.css
src/themes/: presets.ts  shadcn-map.ts
(+7 files in other folders)
