[package]
name = "phonton-desktop"
version = "0.2.7"
description = "Phonton Desktop — commercial control room"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lib]
name = "phonton_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
